// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should be render all pages when limit value is more than the count value 1`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev">Prev</button></li>
  <li><button class="fect-pagination__item fect-pagination__item--active">1</button></li>
  <li><button class="fect-pagination__item">2</button></li>
  <li><button class="fect-pagination__item">3</button></li>
  <li><button class="fect-pagination__item">4</button></li>
  <li><button class="fect-pagination__item">5</button></li>
  <li><button class="fect-pagination__item">6</button></li>
  <li><button class="fect-pagination__item">7</button></li>
  <li><button class="fect-pagination__item">8</button></li>
  <li><button class="fect-pagination__item">9</button></li>
  <li><button class="fect-pagination__item">10</button></li>
  <li><button class="fect-pagination__item fect-pagination__next">Next</button></li>
</nav>"
`;

exports[`Pagination should be render as a element 1`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev">Prev</button></li>
  <li><button class="fect-pagination__item fect-pagination__item--active">1</button></li>
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__next">Next</button></li>
</nav>"
`;

exports[`Pagination should be support simple mode render 1`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev fect-pagination__prev--simple">Prev</button></li>
  <li class="fect-pagination__simple">1 /1</li>
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__next fect-pagination__next--simple">Next</button></li>
</nav>"
`;

exports[`Pagination should be work error when in edge case 1`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev">Prev</button></li>
  <li><button class="fect-pagination__item fect-pagination__item--active">1</button></li>
  <!---->
  <li><button class="fect-pagination__item">2</button></li>
  <li><button class="fect-pagination__item"><svg viewBox="0 0 24 24" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
        <circle cx="12" cy="12" r="1" fill="currentColor"></circle>
        <circle cx="19" cy="12" r="1" fill="currentColor"></circle>
        <circle cx="5" cy="12" r="1" fill="currentColor"></circle>
      </svg></button></li>
  <li><button class="fect-pagination__item">10</button></li>
  <li><button class="fect-pagination__item fect-pagination__next">Next</button></li>
</nav>"
`;

exports[`Pagination should be work error when in edge case 2`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev">Prev</button></li>
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__next">Next</button></li>
</nav>"
`;

exports[`Pagination should render as custom prev or next 1`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev"> 上一页 </button></li>
  <li><button class="fect-pagination__item fect-pagination__item--active">1</button></li>
  <li><button class="fect-pagination__item">2</button></li>
  <li><button class="fect-pagination__item">3</button></li>
  <li><button class="fect-pagination__item">4</button></li>
  <li><button class="fect-pagination__item">5</button></li>
  <li><button class="fect-pagination__item">6</button></li>
  <li><button class="fect-pagination__item">7</button></li>
  <li><button class="fect-pagination__item">8</button></li>
  <li><button class="fect-pagination__item">9</button></li>
  <li><button class="fect-pagination__item">10</button></li>
  <li><button class="fect-pagination__item fect-pagination__next"> 下一页 </button></li>
</nav>"
`;

exports[`Pagination should render as custom prev or next 2`] = `
"<nav class="fect-pagination fect-pagination--medium" style="--pagination-hover: rgba(0, 112, 243, 0.1); --pagination-activeHover: rgba(0, 112, 243, 0.8);">
  <li><button class="fect-pagination__item fect-pagination__item--disabled fect-pagination__prev"> 上一页 </button></li>
  <li><button class="fect-pagination__item fect-pagination__item--active">1</button></li>
  <!---->
  <li><button class="fect-pagination__item">2</button></li>
  <li><button class="fect-pagination__item">3</button></li>
  <li><button class="fect-pagination__item">4</button></li>
  <li><button class="fect-pagination__item">5</button></li>
  <li><button class="fect-pagination__item">6</button></li>
  <li><button class="fect-pagination__item">7</button></li>
  <li><button class="fect-pagination__item"><svg viewBox="0 0 24 24" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" fill="none" shape-rendering="geometricPrecision">
        <circle cx="12" cy="12" r="1" fill="currentColor"></circle>
        <circle cx="19" cy="12" r="1" fill="currentColor"></circle>
        <circle cx="5" cy="12" r="1" fill="currentColor"></circle>
      </svg></button></li>
  <li><button class="fect-pagination__item">10</button></li>
  <li><button class="fect-pagination__item fect-pagination__next"> 下一页 </button></li>
</nav>"
`;
